Add support for auto-installing Gateway API CRDs and configuring the channel

--- a/charts/kubelb-ccm/templates/deployment.yaml
+++ b/charts/kubelb-ccm/templates/deployment.yaml
@@ -64,6 +64,12 @@ spec:
             {{ if .Values.kubelb.enableSecretSynchronizer -}}
             - --enable-secret-synchronizer=true
             {{ end -}}
+            {{ if .Values.kubelb.autoInstallGatewayAPICRDs -}}
+            - --auto-install-gateway-api-crds=true
+            {{ end -}}
+            {{ if .Values.kubelb.gatewayAPIChannel -}}
+            - --gateway-api-crds-channel={{ .Values.kubelb.gatewayAPIChannel }}
+            {{ end -}}
             - --cluster-name={{ required "A valid .Values.kubelb.tenantName to specify the tenant name is required!" .Values.kubelb.tenantName }}
           env:
           - name: NAMESPACE
