--- a/charts/kubelb-manager/crds/kubelb.k8c.io_loadbalancers.yaml
+++ b/charts/kubelb-manager/crds/kubelb.k8c.io_loadbalancers.yaml
@@ -167,6 +167,14 @@ spec:
                   type: object
                 minItems: 1
                 type: array
+              externalTrafficPolicy:
+                description: |-
+                  externalTrafficPolicy denotes if this Service desires to route external traffic to
+                  node-local or cluster-wide endpoints. "Local" preserves the client source IP and avoids
+                  a second hop for LoadBalancer and Nodeport type services, but risks potentially imbalanced
+                  traffic spreading. "Cluster" obscures the client source IP and may cause a second hop to
+                  another node, but should have good overall load-spreading.
+                type: string
               hostname:
                 description: |-
                   Hostname is the domain name at which the load balancer service will be accessible.
