Add explicit namespace to all namespaced scoped resources in helm charts (#292)
Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

--- a/charts/kubelb-manager/templates/config.yaml
+++ b/charts/kubelb-manager/templates/config.yaml
@@ -3,6 +3,7 @@ apiVersion: kubelb.k8c.io/v1alpha1
 kind: Config
 metadata:
   name: default
+  namespace: {{ .Release.Namespace }}
 spec:
   envoyProxy:
     replicas: {{ .Values.kubelb.envoyProxy.replicas }}
