--- a/charts/kubelb-ccm/templates/deployment.yaml
+++ b/charts/kubelb-ccm/templates/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ include "kubelb-ccm.fullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "kubelb-ccm.labels" . | nindent 4 }}
 spec:
