--- a/charts/kubelb-manager/templates/hpa.yaml
+++ b/charts/kubelb-manager/templates/hpa.yaml
@@ -3,6 +3,7 @@ apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: {{ include "kubelb-manager.fullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "kubelb-manager.labels" . | nindent 4 }}
 spec:
