--- a/charts/kubelb-manager/templates/serviceaccount.yaml
+++ b/charts/kubelb-manager/templates/serviceaccount.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "kubelb-manager.serviceAccountName" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "kubelb-manager.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
